--- a/study/t_study/Ex/study/mouseEffect03.html
+++ b/study/t_study/Ex/study/mouseEffect03.html
@@ -14,13 +14,13 @@
         <div class="document">
             <h2 class="t_tit">마우스 이펙트 : 조명 효과</h2>
             <p class="t_desc2">
-                이번에는 마우스에 효과를 넣은 이펙트를 코딩해봤습니다.
+                이번에는 마우스에 조명 효과를 넣은 이펙트를 코딩해봤습니다.
             </p>
 
             <h3 class="t_tit2">HTML</h3>
             <p class="t_desc2">
                 HTML 코드는 딱히 어려운 건 없습니다.<br>
-                각 CSS로 이용할 클래스 이름 지정과 스크립트에 이용할 클래스 이름(mouse__cursor) 미리 지정해둡니다.<br>
+                각 CSS로 이용할 클래스 이름 지정과 스크립트에 이용할 클래스 이름<i>(mouse__cursor)</i> 미리 지정해둡니다.<br>
                 명언은..여러분이 평소에 가진 가치관을 기준으로...?
             </p>
             <details>
@@ -102,18 +102,17 @@
 }
 </code></pre>
             </div>
-        </details>
+        </details><br>
 
         <p class="t_desc2">
             저번 마우스 이펙트와는 다르게 스크롤이 생기는 걸 방지해주기 위해 <i>background-attachment: fixed;</i> 사용해서 <i>고정</i>했습니다.<br>
-            그리고 이미지를 덮어씌우는 형태로 하기 때문에 위치값을 지정하기 위해 <i>background-position: center center;</i>를 사용해줬습니다.
+            그리고 이미지를 덮어씌우는 형태로 하기 때문에 위치값을 지정하기 위해 <i>background-position: center center;</i>를 사용해줬습니다.<br>
             해당 css의 뜻은 <i>백그라운드</i>의 위치를 <i>정가운데</i>에 고정한다는 의미입니다.
         </p>
         <details>
             <summary>CSS CODE</summary>
         <div class="t_code">
-<pre><code class="language.js">
-.mouse__cursor {
+<pre><code class="language.js">.mouse__cursor {
     position: absolute;
     left: 0;
     top: 0;
@@ -131,12 +130,15 @@
         </div>
     </details>
 
-            <h3 class="t_tit2">script</h3>
+            <h3 class="t_tit2">SCRIPT</h3>
             <p class="t_desc2">
-                스크립트는 언제나 비슷한 형태이지만, 계속해서 새로운 걸 추가했습니다.<br>
+                스크립트는 언제나 비슷한 형태이지만, 계속해서 새로운 걸 추가했습니다.<br><br>
 
-                1. 우선 첫 번째는 mouse__cursor를 요소로써 선택자로 잡아줍니다.<br>
-                
+                1. 우선 첫 번째는 <i>mouse__cursor</i>를 요소로써 선택자로 잡아줍니다.<br>
+                2. cursor 요소에 움직일 때마다 전체적인 크기와 위치를 알 수 있는 <i>getBoundingClientRect</i>메서드를 사용해주어 또 다른 circle 요소를 잡아줍니다.<br>
+                3. css가 적용된 cursor의 요소를 움직여 주기 위해 <i>gsap</i>를 사용해줍니다.<br>
+                4. 마우스의 움직임을 추가하기 위해서 이벤트 메서드인 <i>addEventListener("mousemove")</i>를 사용해줍니다.<br>
+                5. 마우스 커서에 좌표 값을 중앙으로 옮겨주기 위해 2번에서 확인한 좌표 값인 circle을 각각 width와 width을 /2로 나눠줍니다.
             </p>
             <details>
                 <summary>SCRIPT CODE</summary>
@@ -164,15 +166,16 @@ window.addEventListener("mousemove", (e) => {
     gsap.to(cursor, {
         duration: 0.5,
         left: e.pageX - circle.width/2,
-        top: e.pageY - circle.height/2
+        top: e.pageY - circle.width/2
     });
 });
 </code></pre>
-                <div class="t_link">
-                    <a href="https://github.com/KDB6/ck/blob/main/javascript/effect/mouseEffect03.html" target="_blank">CODE GO</a>
-                </div>
             </div>
             </details>
+
+            <div class="t_link">
+                <a href="https://github.com/KDB6/ck/blob/main/javascript/effect/mouseEffect03.html" target="_blank">CODE GO</a>
+            </div>
 
             <br><br>
 
