--- a/javascript/effect/searchEffect.html
+++ b/javascript/effect/searchEffect.html
@@ -53,6 +53,7 @@
                     <li>04. 서치 이펙트 : find()<a href="searchEffect04.html"> view</a></li>
                     <li>05. 서치 이펙트 : filter()<a href="searchEffect05.html"> view</a></li>
                     <li>06. 서치 이펙트 : sort(), reverse()<a href="searchEffect06.html"> view</a></li>
+                    <li>07. 서치 이펙트 : 피셔 에이츠 알고리즘 이용하여 정렬하기<a href="searchEffect07.html"> view</a></li>
                 </ul>
             </div>
             <div class="main_sample">
